@@ -1,3 +1,6 @@
+- library:
+  o associate media_cfg data to media when adding them
+
 Version 7.13 - 4 December 2012, by Thierry Vignaud
 
 - library speedups when looking up packages:
